--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
 
 	            </article>
             
-                 <article class="bgrid first">
+                 <article class="bgrid">
 
 	               <p>Zest Aromas Pvt Ltd.<br>
                        Silvassa
