--- a/index.html
+++ b/index.html
@@ -516,7 +516,6 @@
 	               </div>
 
 	               <h3>PerkinElmer <br>
-                       Spectroscopy<br>
                        Instuments</h3>
 
 	               <div class="service-content">
@@ -576,7 +575,7 @@
                 5. BSR Technologies <br>
                 6. Shimadzu Balances <br>
                 7. Microlit Liquid Handling Devices <br>
-                We have our import Export License (IEC).<br>
+                We have import Export License (IEC).<br>
                 IEC no -  ADAPP9984B
 	         </p>
 
@@ -941,7 +940,8 @@
                   <p>
                   Sensewell Analytical Instruments<br>
                   14 -Chinarwood, Near Hotel Taj<br>
-                  Akota  Vadodara - 390020                
+                  Akota  Vadodara - 390020  
+		  GSTIN : 24ADAPP9984B1ZF
                   </p>
                   
                </div> <!-- /columns -->
