--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					   <!-- Slide -->
 					   <li>
 						   <div class="flex-caption">
-								<h1>Hello, we are Sensewell. We provide tools That You need.</h1>
+								<h1>Hello, we are Sensewell. We provide tools That You need</h1>
 								<p><a class="button stroke smoothscroll" href="#about">More About Us</a></p>
 							</div>
 					   </li>
@@ -103,7 +103,7 @@
 					   <!-- Slide -->
 					   <li>
 							<div class="flex-caption">
-								<h1 >"We Provide Lab Solutions".</h1>
+								<h1 >"We Provide Lab Solutions"</h1>
 								<p><a class="button stroke smoothscroll" href="#portfolio">See Our Works</a></p>
 							</div>
 					   </li>
@@ -111,7 +111,7 @@
 					   <!-- Slide -->
 					   <li>
 						   <div class="flex-caption">
-								<h1 >Take a look at some of <a class="smoothscroll" href="#portfolio" title="">our works</a> or <a class="smoothscroll" href="#contact" title="">contact us</a> to discuss how we can help you.</h1>
+								<h1 >Take a look at some of <a class="smoothscroll" href="#portfolio" title="">our works</a> or <a class="smoothscroll" href="#contact" title="">contact us</a> to discuss how we can help you</h1>
 								<p><a class="button stroke smoothscroll" href="#contact">Get In Touch</a></p>
 							</div>
 					   </li>
@@ -654,7 +654,7 @@
 
 		                	<div class="member-name">
 		                   	<h3>Prabhakar Ghule</h3>
-		                   	<span>General manager - Marketing</span>
+		                   	<span>General Manager - Marketing</span>
 		                	</div>
 
 		             </div>
@@ -940,7 +940,7 @@
                   <p>
                   Sensewell Analytical Instruments<br>
                   14 -Chinarwood, Near Hotel Taj<br>
-                  Akota  Vadodara - 390020  
+                  Akota  Vadodara - 390020 <br>
 		  GSTIN : 24ADAPP9984B1ZF
                   </p>
                   
