--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 
 	               <div class="service-content">
 		               <p>
-                          Chromatography & spectroscopy <br>
+                           Spectroscopy <br>
                            instruments<br>
                          GC , Headspace , Autosampler , HPLC<br>
                            UV , ICP , ICPMS
@@ -898,7 +898,7 @@
 
 	         <hr />
 
-	         <p>If Yor need our Services <br>
+	         <p>If You need our Services <br>
                 We are Always Happy To Help You<br>
             </p>
 
@@ -941,6 +941,7 @@
                   Sensewell Analytical Instruments<br>
                   14 -Chinarwood, Near Hotel Taj<br>
                   Akota  Vadodara - 390020 <br>
+		  Gujarat, India.
 		  GSTIN : 24ADAPP9984B1ZF
                   </p>
                   
