--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
                   Sensewell Analytical Instruments<br>
                   14 -Chinarwood, Near Hotel Taj<br>
                   Akota  Vadodara - 390020 <br>
-		  Gujarat, India.
+		  Gujarat, India.<br>
 		  GSTIN : 24ADAPP9984B1ZF
                   </p>
                   
@@ -952,7 +952,9 @@
                     <p>
                   Sensewell Analytical Instruments / Emochrom Tech.<br>
                   103 – Avanti Chamber, B/H – Hotel Express<br>                        
-                  R C Dutt Road, Alkapuri, Vadodara - 390007              
+                  R C Dutt Road, Alkapuri,<br>
+		  Vadodara - 390007 <br>
+		  Gujarat, India.
                   </p>
 
                   
