--- a/index.html
+++ b/index.html
@@ -521,9 +521,8 @@
 	               <div class="service-content">
 		               <p>
                            Spectroscopy <br>
-                           instruments<br>
-                         GC , Headspace , Autosampler , HPLC<br>
-                           UV , ICP , ICPMS
+                          UV-vis , AAS, FTIR , <br>
+			  ICP , ICPMS
 
                        </p>
 	               </div>
