--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             
                 We have tie-up with Sensewell Calibration Services –<br>
             National Accreditation Board for Testing and Calibration<br>
-            Laboratories of following Scope:<br>
+            Laboratories for following Scope:<br>
                 1.Electro – Technical Calibration<br>
                 2.Mechanical Calibration<br>
                 3.Thermal Calibration<br>
@@ -516,7 +516,7 @@
 	               </div>
 
 	               <h3>PerkinElmer <br>
-                       Instuments</h3>
+                       Instruments</h3>
 
 	               <div class="service-content">
 		               <p>
