--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   <div class="item-wrap">
 
                      <a>
-                        <img src="images/portfolio/Upload/pc1.jpeg" alt="">
+                        <img src="images/portfolio/Upload/pc1.jpg" alt="">
                         <div class="overlay"></div>
                         <div class="portfolio-item-meta">
           					      
