--- a/index.html
+++ b/index.html
@@ -596,8 +596,8 @@
 		8. Chromatec Inruments, Russia<br>
 		9. Auto sampler, Headspace<br>
 			Thermal Distributor System(TDS)<br>
-		10.Nitrogen Generator
-		11.Hydrogen Generator
+		10.Nitrogen Generator<br>
+		11.Hydrogen Generator<br>
                 We have import Export License (IEC).<br>
                 IEC no -  ADAPP9984B
 	         </p>
