--- a/index.html
+++ b/index.html
@@ -533,8 +533,9 @@
 	               	<i class="icon-film"></i>
 	               </div>
 
-	               <h3>Homeland of chromatography
-                       </h3>
+	               <h3>Chormatec Instruments,<br>
+                       Russia
+	         	</h3>
 
 	               <div class="service-content">
 		               <p>
@@ -593,13 +594,13 @@
                 5. BSR Technologies <br>
                 6. Shimadzu Balances <br>
                 7. Microlit Liquid Handling Devices <br>
-		8. Chromatec Inruments, Russia<br>
-		9. Auto sampler, Headspace<br>
-			Thermal Distributor System(TDS)<br>
-		10.Nitrogen Generator<br>
-		11.Hydrogen Generator<br>
-                We have import Export License (IEC).<br>
-                IEC no -  ADAPP9984B
+		8. Chromatec Instruments, Russia<br>
+			Gas chromatography, Mass Spectroscopy <br>
+		Accessories like Auto sampler, Headspace<br>
+				Thermal Disorber<br>
+				Nitrogen Generator<br>
+				Hydrogen Generator<br>
+                
 	         </p>
 
       	</div> <!-- /left -->
@@ -848,13 +849,6 @@
 
 	               <p>Pab Organics Ltd.<br>
                        Vadodara
-	               </p>
-
-	            </article>
-			 <article class="bgrid">
-
-	               <p>Chormatec Instruments<br>
-                       Russia
 	               </p>
 
 	            </article>
