--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                             GC , GCMS, <br>
 			Gas Analyser<br>
 			RGA , NGA , TOGA ,<br>
-			P10NA , SIMDIST
+			PIONA , SIMDIST
                           
                        </p>
 	               </div>
