--- a/index.html
+++ b/index.html
@@ -594,13 +594,11 @@
                 6. Shimadzu Balances <br>
                 7. Microlit Liquid Handling Devices <br>
 		8. Chromatec Instruments, Russia<br>
-			Gas chromatography, Mass Spectroscopy <br>
+			<p>Gas chromatography, Mass Spectroscopy <br>
 		Accessories like Auto sampler, Headspace<br>
 				Thermal Disorber<br>
 				Nitrogen Generator<br>
-				Hydrogen Generator<br>
-                
-	         </p>
+				Hydrogen Generator<br></p>
 
       	</div> <!-- /left -->
 
