--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 	               	<i class="icon-film"></i>
 	               </div>
 
-	               <h3>Chormatec Instruments,<br>
+	               <h3>Chromatec Instruments,<br>
                        Russia
 	         	</h3>
 
